Fix the sidebar not stretching when main content section is longer.

--- a/front-end/src/app/layout/layout.component.scss
+++ b/front-end/src/app/layout/layout.component.scss
@@ -51,7 +51,6 @@ app-footer {
 
 .sidebar-content-container {
   min-height: calc(100vh - 2rem);
-  height: calc(100vh - 2rem);
   width: 100%;
   display: flex;
   flex-direction: column;
